# point

./: .gitignore  README.md  app.js  package-lock.json  package.json  style.css
services/api/: .env.example  README.md  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_schema.py  0002_event_children_and_categories.py  0003_event_age_rating.py  0004_auth_profile_module.py  0004_organizer_event_management.py  0005_account_type_and_avatar.py  0006_diplom_admin_notifications.py  0008_event_interactions.py  0009_event_views.py
services/api/app/: __init__.py  main.py
services/api/app/api/: deps.py  media_placeholders.py
services/api/app/api/v1/admin/: dashboard_charts.py  router.py  schemas.py
services/api/app/api/v1/auth/: router.py  schemas.py  service.py
services/api/app/api/v1/catalog/: router.py  schemas.py  service.py
services/api/app/api/v1/chat/: manager.py  router.py  schemas.py  store.py
services/api/app/core/: config.py  deps.py  media.py  placeholders.py  security.py
services/api/app/db/: session.py
services/api/app/models/: __init__.py  association.py  category.py  complaint.py  event.py  event_interaction.py  event_ticket.py  notification.py  organizer_request.py  push_subscription.py  user.py  user_category.py
services/api/app/seed/: __main__.py  bootstrap.py  data.py
services/api/app/services/: notifications.py
services/api/point_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/api/tests/: conftest.py  test_catalog_service.py  test_chat_ws.py  test_notifications.py
(+137 files in other folders)
